# D4TAlink.python

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
src/D4TAlink/: D4TAlink.py  D4TAlinkPar.py  D4TAlinkTask.py  __init__.py
tests/: test.py
